Se mejora el longin

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav>
-            <a class="nav-link" href="login.php">Iniciar Sesion </a>
+            <a class="nav-link" href="login.html">Iniciar Sesion </a>
         </nav>
         <div class="wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none"
                 style="height: 100%; width: 100%;">
